# Algovis---Algorithm-Visualisation

./: LICENSE  README.txt
branches/datasource/datasource-valgrind/: README.txt
branches/datasource/datasource-valgrind/valgrind/: Makefile.all.am  Makefile.am  configure.in
branches/datasource/datasource-valgrind/valgrind/algovis/: Makefile  Makefile.am  Makefile.in  av_main.c  av_vis.cpp  av_vis.h
branches/datasource/datasource-valgrind/valgrind/algovis/.deps/: algovis_x86_linux-av_main.Po  algovis_x86_linux-av_vis.Po
branches/datasource/datasource-valgrind/valgrind/algovis/tests/: Makefile  Makefile.in
branches/datasource/datasource-wrappers/: TODO.txt  algovis c++.sln  c++ 2008.sln  c++.sln
branches/datasource/datasource-wrappers/algovis c++/: algovis c++.vcproj  algovis c++.vcxproj  algovis c++.vcxproj.filters
branches/datasource/datasource-wrappers/algovis c++ unit-tests/: TestSuite.cpp  algovis c++ unit-tests.ncb  algovis c++ unit-tests.vcproj  algovis c++ unit-tests.vcxproj  algovis c++ unit-tests.vcxproj.filters
branches/datasource/datasource-wrappers/algovis test/: algovis test.vcproj  algovis test.vcxproj  algovis test.vcxproj.filters
branches/resources/boost/boost-subset/: main.cpp  (+1 more)
branches/resources/cxxtest/: README
branches/resources/utilities-lib/: utilities-lib.ncb  utilities-lib.vcproj  utilities-lib.vcxproj  utilities-lib.vcxproj.filters
branches/trunk/view/: display.cpp  display.h  main.cpp  view 2008.vcproj  view.vcproj  view.vcxproj  view.vcxproj.filters
docs/: Diagrams.pptx  P4P poster.pptx  SystemOverview.pptx  conference presentation - the real thing nathan.pptx  conference presentation - the real thing.pptx  dev docs.txt  revision log.txt
docs/Pictures & UML/: ao 2.dia  mapping.dia
documentation/: TODO.txt  migration.txt
(+246 files in other folders)
